# AirBoard

./: .flutter-plugins  README.md  flutter_rust_bridge.yaml  implementation_plan.md  implementation_plan10.md  implementation_plan11.md  implementation_plan2.md  implementation_plan3.md  implementation_plan4.md  implementation_plan5.md  implementation_plan6.md  implementation_plan7.md  implementation_plan8.md  implementation_plan9.md  pubspec.yaml
.github/workflows/: build_ios.yml
android/: local.properties
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs
rust/src/core/: mod.rs
rust/src/core/clipboard/: linux.rs
rust/src/core/clipboard_state/: mod.rs
rust/src/core/connection_registry/: mod.rs
rust/src/core/crypto/: mod.rs
rust/src/core/discovery/: mod.rs
rust/src/core/heartbeat/: mod.rs
rust/src/core/ios/: mod.rs
rust/src/core/lifecycle/: mod.rs
rust/src/core/networking/: client.rs  mod.rs  server.rs
rust/src/core/pairing/: mod.rs
rust/src/core/peer_manager/: mod.rs
rust/src/core/protocol/: models.rs
rust/src/core/reconnect/: mod.rs
rust/src/core/session/: mod.rs
rust/src/core/sync_engine/: engine.rs
rust/src/core/trust_store/: mod.rs
rust/src/core/utils/: helpers.rs
rust_builder/: pubspec.yaml
squashfs-root/: .DirIcon  iloader.desktop
test/: widget_test.dart
(+23 files in other folders)
