[package]
name = "rust_lib_clipboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0"
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net", "io-util"] }
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.4.0"
sha2 = "0.10"
uuid = { version = "1.7", features = ["v4"] }
futures-util = "0.3"
once_cell = "1.19"
